--- a/style.css
+++ b/style.css
@@ -1,21 +1,28 @@
 body {
   text-align: center;
-  background-color:#F0F0F0;  
+  background-color:#EFF9FD;  
   font-family:'Roboto', sans-serif; 
-  color:#242627 ; 
+  color: #161637
+ ; 
   font-size:20px ;
   line-height:21px ;
   margin: 10px 60px 10px 60px;
 }
+p {
+  font-family:'DM Sans', sans-serif;
+}
 
 h1 {
   font-family:'DM Sans', sans-serif;
-  color:#242627 ; 
+  color: #161637
+ ; 
   font-size:30px ;
   line-height: 50px ;
   display: inline-block;
   margin-top: 0px;
   margin-bottom: 10px;
+  margin-left: 18px
+
 }
 img {
   width: 50px;
@@ -28,27 +35,28 @@ img {
 }
 button {
   border-radius: 50px;
-  background: #1F1F1F;
+  background-color: #32349A
+;
   color: #fff;
   font-size: 16px;
   line-height: 22px;
   padding: 10px 20px;
   border: none;
-  border: 1px solid #0c0c0c;
   transition: 300ms ease;
 }
 
+button a{
+  color: #F0F0F0;
+  text-decoration: none;
+}
 button:hover {
   
-  color: #0f0f0f;
-  background-color:#FFFFFF;
+  color: #161637
+;
+  background-color:#494aa0;
 }
-a {
-  text-decoration: none;
-  color: #fff
-  
 
-}
+
 
 ul {
   display: block;
@@ -65,71 +73,95 @@ li {
   display: inline;
 
 }
+li a {
+  text-decoration: none;
+  color: #161637
+  
+}
 div {
   border-radius: 5px;
-  background-color:#FFFFFF;
+  background-color:#EFF9FD;
 }
  .header {
    
    padding: 13px;
    width:622px;
    margin: 20px auto;
-   box-shadow: 0 5px 20px rgba(0,0,0,.1);
    padding-top: 2px;
+   background-color: white;
+;
  }
  .container {
    padding: 13px;
    width: 622px;
    margin: 20px auto;
-   box-shadow: 0 5px 20px rgba(0,0,0,.1)
+   
  }
  .footer {
-   color: #fff;
-   background-color: #1F1F1F;
+   color: #161637;
+   background-color: #D5F3FF;
    width: 622px;
    padding: 13px;
    margin: 20px auto;
-   box-shadow: 0 5px 5px rgba(0,0,0,.1)
+   box-shadow: 0 2px 2px rgba(233, 233, 233, 0.959)
  }
- .card {
+ /* .card {
     text-align: center;
     background: white;
     padding: 40px;
     color: white;
-    padding: 4px;
+    padding: 4px; */
     
- }
+ /* } */
  .name-picture {
-   padding: 0px;
+   padding: 6px;
    display: flex;
    justify-content: center;
-   margin-top: 19px
+   margin-top: 19px;
+   background-color: white;
+   border: 4px solid;
+   border-color: white;
+   
+
  }
  #history {
-   background-image:linear-gradient(45deg, #eeeeee57, rgb(0 0 0 / 10%)), url(images/egypt.jpg);
+   background-image:linear-gradient(45deg
+, #eeeeee57, rgb(255 255 255 / 0%)), url(images/egypt.jpg);
    background-size:cover;
    padding: 50px 0;
    border-radius: 5px;
    color: white;
-   margin-bottom: 11px
+   margin: 5px
    
  }
  #chinese {
-   background-image:linear-gradient(45deg, #eeeeee57, rgb(0 0 0 / 10%)), url(images/china.jpg);
+   background-image:linear-gradient(
+45deg
+ , #242627, rgb(255 255 255 / 0%)), url(images/china.jpg);
    background-size:cover;
    padding: 50px 0;
    border-radius: 5px;
-   margin-bottom: 11px;
+   margin: 5px;
    color: white;
 
  }
  #cats {
-   background-image:linear-gradient(45deg, #eeeeee57, rgb(0 0 0 / 10%)),url(images/cats.jpg);
+   background-image:linear-gradient(
+45deg
+ , #5f5c5c91, rgb(0 0 0 / 32%)),url(images/cats.jpg);
    background-size:cover;
    padding: 50px 0;
    border-radius: 5px;
-   margin-bottom: 11px;
+   margin: 5px;
    color: white;
+ }
+ .card {
+    text-align: center;
+    background-color:#FFFFFF;
+    padding: 40px;
+    color: white;
+    padding: 9px;
+    margin: 30px;
  }
 
  
